# forge_docs_mcp_server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/forge_docs/: __init__.py  models.py  parser.py  server.py
src/forge_docs/docs/: forge.txt
