[project]
name = "forge-docs-mcp"
version = "0.1.0"
description = "MCP server for FORGE 3D Gaussian Splatting documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pydantic>=2.0.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "forge", "gaussian-splatting", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/forge_docs_mcp"
Repository = "https://github.com/yourusername/forge_docs_mcp"
Issues = "https://github.com/yourusername/forge_docs_mcp/issues"

[project.scripts]
forge-docs = "forge_docs.server:main"

[tool.setuptools]
packages = ["forge_docs"]
package-dir = {"forge_docs" = "src/forge_docs"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
